--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,5 +1,5 @@
-sonar.projectKey=co.com.ceiba:adnFront.alejandro.diez
-sonar.projectName=Ceiba-AdnFront(alejandro.diez)
+sonar.projectKey=co.com.ceiba:adnFront.ricardo.morales
+sonar.projectName=Ceiba-AdnFront(ricardo.morales)
 sonar.projectDesciption=ADN
 sonar.projectVersion=1.0
 sonar.sourceEncoding=UTF-8
