--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "ngx-cookie-service": "^2.2.0",
     "popper.js": "^1.16.1",
     "rxjs": "~6.5.5",
+    "sweetalert2": "^10.15.5",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
   },
