--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -5,7 +5,7 @@ sonar.projectVersion=1.0
 sonar.sourceEncoding=UTF-8
 sonar.sources=src
 sonar.tests=src
-sonar.exclusions=**/node_modules/**,**/e2e/**
+sonar.exclusions=**/node_modules/**,**/e2e/**,**/src/app/shared/**,**/src/app/core/**
 sonar.test.inclusions=**/*.spec.ts
 sonar.coverage.exclusions=**/*mock*.ts,**/*constants*.ts,**/*guard*.ts,**/*environment*.ts
 sonar.typescript.lcov.reportPaths=coverage/adn-front/lcov.info
