--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,11 +1,11 @@
 sonar.projectKey=co.com.ceiba:adnFront.ricardo.morales
 sonar.projectName=Ceiba-AdnFront(ricardo.morales)
-sonar.projectDesciption=ADN
-sonar.projectVersion=1.0
 sonar.sourceEncoding=UTF-8
-sonar.sources=src
-sonar.tests=src
-sonar.exclusions=**/node_modules/**,**/e2e/**,**/src/app/shared/**,**/src/app/core/**
+sonar.sources=src/app
+sonar.tests=src/app
+sonar.exclusions=**/node_modules/**,**/*.module.ts,**/*.directive.ts,**/interceptor/*.ts
 sonar.test.inclusions=**/*.spec.ts
-sonar.coverage.exclusions=**/*mock*.ts,**/*constants*.ts,**/*guard*.ts,**/*environment*.ts
-sonar.typescript.lcov.reportPaths=coverage/adn-front/lcov.info
+# sonar.typescript.lcov.reportPaths=reports/coverage/lcov.info
+sonar.javascript.lcov.reportPaths=reports/coverage/app-base/lcov.info
+# sonar.testExecutionReportPaths=reports/unit/test-results.xml
+# sonar.coverage.jacoco.xmlReportPaths=
