--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "karma-jasmine": "~2.0.1",
     "karma-jasmine-html-reporter": "^1.4.0",
     "karma-junit-reporter": "^1.2.0",
+    "ng2-mock-component": "^0.2.0",
     "protractor": "~5.4.0",
     "protractor-beautiful-reporter": "^1.2.8",
     "ts-node": "~7.0.0",
